# ml-economy

./: .gitignore  creditcard.py  pyproject.toml
1. CreditCard/: README.md  main.py
2. Trading/: README.md  main.py
3. Backtesting/: main.ipynb
4. Recommendations/: main.ipynb
