[project]
name = "ekonomia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.10",
    "keras>=3.9.0",
    "pandas>=2.2.3",
    "ruff>=0.11.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
