[project]
name = "ekonomia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting>=0.6.4",
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.10",
    "keras>=3.9.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pmdarima>=2.0.4",
    "prophet>=1.1.6",
    "ruff>=0.11.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "yfinance>=0.2.55",
]
